# arduino_baremetal

./: README.md
01_blinky/: CMakeLists.txt  Makefile  avr-toolchain.cmake  flash.sh
01_blinky/src/: blinky.c  crt0.c  vectors.c
02_blink_timer/src/: blink_timer.c
03_software_pwm/: CMakeLists.txt  Makefile
03_software_pwm/src/: software_pwm.c
04_go_basic/: CMakeLists.txt  Makefile  linker.ld
04_go_basic/lib/avr/: io.h
04_go_basic/src/: crt0.S  go_basic.c  startup.S
05_baremetal_blinky/: CMakeLists.txt  linker.ld
05_baremetal_blinky/src/: baremetal_blinky.c  crt0.S  startup.S
06_uart_putc/: Makefile  linker.ld
06_uart_putc/lib/avr/: io.h
06_uart_putc/src/: crt0.S  uart_putc.c
07_uart_puts/: Makefile
07_uart_puts/src/: uart_puts.c
08_uart_printf/: Makefile  avr-toolchain.cmake
08_uart_printf/src/: uart_printf.c
09_printf/: Makefile
09_printf/drivers/include/: uart.h
09_printf/drivers/src/uart/: uart.c
09_printf/lib/: config.h
09_printf/src/: main.c
10_uart_getc/src/: uart_getc.c
11_embedded_cli/: CMakeLists.txt  Makefile  STRUCTURE.md  linker.ld
11_embedded_cli/drivers/include/: output.h  uart.h
11_embedded_cli/drivers/src/: output.c
11_embedded_cli/drivers/src/uart/: uart.c
11_embedded_cli/include/: stdio.h
11_embedded_cli/lib/avr/: io.h
11_embedded_cli/lib/embedded_cli/src/: embedded_cli.c
11_embedded_cli/lib/std/: pgmspace.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdlib.c  stdlib.h  string.c  string.h
11_embedded_cli/src/: main.c
11_embedded_cli/src/core/: crt0.S
11_embedded_cli/sys/include/: stdio.h
11_embedded_cli/sys/src/: stdio.c
